# agent-q

./: .env.example  .example.env  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  THREAD_QUEUE_CHANGES.md  docker-compose.yml  pyproject.toml
app/: agent_processor.py  config.py  main.py  models.py  queue_manager.py  tools.py  worker.py
app/api/: routes.py  streaming.py  threads.py
app/utils/: __init__.py  logger.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  THREAD_ARCHITECTURE.md  THREAD_IMPLEMENTATION_SUMMARY.md
examples/chat-ui/: README.md  package-lock.json  package.json
examples/chat-ui/src/: App.css  App.tsx
examples/chat-ui/src/components/: ChatInterface.tsx  ChatMessage.tsx  MarkdownRenderer.tsx  (+1 more)
examples/typescript-client/: README.md  client-demo.ts  package-lock.json  package.json  tsconfig.json  types.ts
src/shinzo/: agent_processor.py  config.py  main.py  queue_manager.py  worker.py
src/shinzo/agent/: __init__.py  history.py  initialization.py  processor.py  streaming.py
src/shinzo/api/: routes.py  streaming.py  threads.py
src/shinzo/models/: __init__.py
src/shinzo/queue/: __init__.py  manager.py  operations.py  state.py  summary.py  threads.py  types.py
src/shinzo/tools/: __init__.py
src/shinzo/utils/: __init__.py  logger.py
src/shinzo/worker/: __init__.py  coordinator.py  manager.py  thread_worker.py
tests/integration/: conftest.py  test_api.py  test_thread_api.py
tests/unit/: test_models.py  test_queue_manager.py  test_thread_tracking.py
(+1 files in other folders)
